--- a/arch/arm64/configs/l861_defconfig
+++ b/arch/arm64/configs/l861_defconfig
@@ -24,7 +24,7 @@ CONFIG_NEED_SG_DMA_LENGTH=y
 CONFIG_SWIOTLB=y
 CONFIG_IOMMU_HELPER=y
 CONFIG_ARM_ERRATA_824069=y
-CONFIG_ARM_ERRATA_845719=y
+# CONFIG_ARM_ERRATA_845719=y
 CONFIG_KERNEL_MODE_NEON=y
 CONFIG_DEFCONFIG_LIST="/lib/modules/$UNAME_RELEASE/.config"
 CONFIG_IRQ_WORK=y
@@ -156,7 +156,7 @@ CONFIG_VM_EVENT_COUNTERS=y
 # CONFIG_SLUB_DEBUG is not set
 CONFIG_COMPAT_BRK=y
 # CONFIG_SLAB is not set
-CONFIG_DYNAMIC_FSYNC=y
+# CONFIG_DYNAMIC_FSYNC=y
 CONFIG_SLUB=y
 # CONFIG_SLOB is not set
 CONFIG_PROFILING=y
@@ -173,7 +173,7 @@ CONFIG_HAVE_HW_BREAKPOINT=y
 CONFIG_HAVE_ARCH_JUMP_LABEL=y
 CONFIG_ARCH_WANT_COMPAT_IPC_PARSE_VERSION=y
 CONFIG_HAVE_ARCH_SECCOMP_FILTER=y
-CONFIG_SECCOMP_FILTER=y
+# CONFIG_SECCOMP_FILTER=y
 CONFIG_MODULES_USE_ELF_RELA=y
 CONFIG_CLONE_BACKWARDS=y
 CONFIG_OLD_SIGSUSPEND3=y
@@ -208,9 +208,9 @@ CONFIG_IOSCHED_NOOP=y
 CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_CFQ=y
 # CONFIG_DEFAULT_DEADLINE is not set
-# CONFIG_DEFAULT_CFQ is not set
-CONFIG_DEFAULT_NOOP=y
-CONFIG_DEFAULT_IOSCHED="noop"
+CONFIG_DEFAULT_CFQ=y
+# CONFIG_DEFAULT_NOOP is not set
+CONFIG_DEFAULT_IOSCHED="cfq"
 CONFIG_UNINLINE_SPIN_UNLOCK=y
 CONFIG_ARCH_SUPPORTS_ATOMIC_RMW=y
 CONFIG_MUTEX_SPIN_ON_OWNER=y
@@ -284,12 +284,12 @@ CONFIG_MIGRATION=y
 CONFIG_PHYS_ADDR_T_64BIT=y
 CONFIG_ZONE_DMA_FLAG=1
 # CONFIG_BOUNCE is not set
-CONFIG_KSM=y
+# CONFIG_KSM=y
 CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
 CONFIG_CROSS_MEMORY_ATTACH=y
 # CONFIG_CLEANCACHE is not set
 # CONFIG_FRONTSWAP is not set
-CONFIG_SECCOMP=y
+# CONFIG_SECCOMP=y
 
 #
 # Boot options
@@ -319,21 +319,21 @@ CONFIG_CPU_FREQ_STAT_DETAILS=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVEPLUS is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
+CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_BALANCE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_HOTPLUG is not set
-CONFIG_CPU_FREQ_DEFAULT_GOV_THUNDERX=y
+# CONFIG_CPU_FREQ_DEFAULT_GOV_THUNDERX=y
 # CONFIG_CPU_FREQ_GOV_BALANCE is not set
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
-CONFIG_CPU_FREQ_GOV_INTERACTIVEPLUS=y
+# CONFIG_CPU_FREQ_GOV_INTERACTIVEPLUS=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
-CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
+# CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 # CONFIG_CPU_FREQ_GOV_HOTPLUG is not set
-CONFIG_CPU_FREQ_GOV_THUNDERX=y
-CONFIG_THUNDERPLUG_CONTROL=y
+# CONFIG_CPU_FREQ_GOV_THUNDERX=y
+# CONFIG_THUNDERPLUG_CONTROL=y
 
 #
 # ARM CPU frequency scaling drivers
@@ -418,8 +418,8 @@ CONFIG_UNIX=y
 # CONFIG_UNIX_DIAG is not set
 CONFIG_XFRM=y
 CONFIG_XFRM_ALGO=y
-CONFIG_XFRM_USER=y
-CONFIG_XFRM_SUB_POLICY=y
+# CONFIG_XFRM_USER=y
+# CONFIG_XFRM_SUB_POLICY=y
 CONFIG_XFRM_MIGRATE=y
 # CONFIG_XFRM_STATISTICS is not set
 CONFIG_XFRM_IPCOMP=y
@@ -790,7 +790,7 @@ CONFIG_WEXT_PROC=y
 CONFIG_WEXT_PRIV=y
 CONFIG_CFG80211=y
 CONFIG_NL80211_TESTMODE=y
-# CONFIG_CFG80211_DEVELOPER_WARNINGS is not set
+CONFIG_CFG80211_DEVELOPER_WARNINGS=y
 # CONFIG_CFG80211_REG_DEBUG is not set
 # CONFIG_CFG80211_CERTIFICATION_ONUS is not set
 # CONFIG_CFG80211_DEFAULT_PS is not set
@@ -898,8 +898,8 @@ CONFIG_UID_STAT=y
 # CONFIG_LATTICE_ECP3_CONFIG is not set
 # CONFIG_SRAM is not set
 # CONFIG_TI_TCA6418 is not set
-CONFIG_UID_CPUTIME=y
-CONFIG_THUNDERQUAKE_ENGINE_GPL=y
+# CONFIG_UID_CPUTIME=y
+# CONFIG_THUNDERQUAKE_ENGINE_GPL=y
 # CONFIG_C2PORT is not set
 
 #
@@ -948,13 +948,14 @@ CONFIG_MD32_SUPPORT=y
 CONFIG_MTK_MEM=y
 # CONFIG_MTK_MEMCFG is not set
 # CONFIG_MTK_DT_SUPPORT is not set
-# CONFIG_MTK_SMARTBOOK_SUPPORT is not set
+# CONFIG_MTK_C2K_SUPPORT is not set
+CONFIG_MTK_SMARTBOOK_SUPPORT=y
 CONFIG_MTK_SENSOR_SUPPORT=y
 # CONFIG_CUSTOM_SEC_AUTH_SUPPORT is not set
 # CONFIG_MTK_SENSOR_HUB_SUPPORT is not set
 CONFIG_CUSTOM_KERNEL_IMGSENSOR="imx230_mipi_raw s5k3l8_mipi_raw s5k3l9_mipi_raw s5k5e8yx_mipi_raw s5k5e9yx_mipi_raw"
 CONFIG_CUSTOM_KERNEL_CAM_CAL_DRV="cat24c16"
-CONFIG_CUSTOM_KERNEL_LCM="r63419_wqhd_truly_phantom_2k_vdo_ok"
+CONFIG_CUSTOM_KERNEL_LCM="amoi_r63419_wqhd_truly_phantom_2k_vdo_ok r63419_wqhd_truly_phantom_2k_vdo_ok"
 CONFIG_CUSTOM_KERNEL_FLASHLIGHT="constant_flashlight"
 # CONFIG_MTK_FORCE_CLUSTER1 is not set
 CONFIG_MTK_MMPROFILE_SUPPORT=y
@@ -963,7 +964,7 @@ CONFIG_MTK_HIBERNATION=y
 # CONFIG_MTK_TC1_FEATURE is not set
 # CONFIG_MTK_TC7_FEATURE is not set
 # CONFIG_MTK_TC1_FM_AT_SUSPEND is not set
-CONFIG_MTK_CLKMGR=y
+# CONFIG_MTK_CLKMGR=y
 
 #
 # Kernel Configurations
@@ -980,16 +981,16 @@ CONFIG_MTK_SCHED_TRACERS=y
 #
 # MET
 #
-# CONFIG_MTK_MET is not set
-# CONFIG_MTK_MET_PLF is not set
+CONFIG_MTK_MET=y
+CONFIG_MTK_MET_PLF=y
 # CONFIG_MALI_MIDGARD is not set
 
 #
 # MTPROF tools
 #
-CONFIG_MTPROF=y
+# CONFIG_MTPROF=y
 CONFIG_MTK_MUTATION=y
-# CONFIG_MTPROF_CPUTIME is not set
+CONFIG_MTPROF_CPUTIME=y
 CONFIG_MTK_AEE_FEATURE=y
 CONFIG_MTK_AEE_AED=y
 CONFIG_MTK_AEE_IPANIC=y
@@ -1011,9 +1012,9 @@ CONFIG_MTK_RAM_CONSOLE_DRAM_ADDR=0x43F00000
 # CONFIG_MT_LOCK_DEBUG is not set
 CONFIG_PRINTK_PROCESS_INFO=y
 CONFIG_MT_PRINTK_UART_CONSOLE=y
-CONFIG_LOG_TOO_MUCH_WARNING=y
-CONFIG_LOG_TOO_MUCH_DETECT_COUNT=300
-CONFIG_LOG_TOO_MUCH_DETECT_GAP=10
+# CONFIG_LOG_TOO_MUCH_WARNING=y
+# CONFIG_LOG_TOO_MUCH_DETECT_COUNT=300
+# CONFIG_LOG_TOO_MUCH_DETECT_GAP=10
 # CONFIG_MT_ENG_BUILD is not set
 CONFIG_RAMDISK_OFFSET=0xF00000
 # CONFIG_EARLY_LINUX_PORTING is not set
@@ -1044,7 +1045,7 @@ CONFIG_MTK_STORAGE_PID_LOGGER=y
 #
 # MTK Large Memory mode support
 #
-CONFIG_MTK_LM_MODE=y
+# CONFIG_MTK_LM_MODE=y
 # CONFIG_MTK_TABLET_HARDWARE is not set
 CONFIG_GATOR_DRIVER=y
 # CONFIG_MTK_IPV6_TETHER_NDP_MODE is not set
@@ -1091,7 +1092,7 @@ CONFIG_MTK_G2D=y
 # CONFIG_MOUSE_PANASONIC_EVQWJN is not set
 # CONFIG_MOUSE_AVAGOTECH_A320 is not set
 CONFIG_MTK_HAFG_20=y
-CONFIG_MTK_MULTI_BAT_PROFILE_SUPPORT=y
+# CONFIG_MTK_MULTI_BAT_PROFILE_SUPPORT=y
 CONFIG_MTK_SMART_BATTERY=y
 CONFIG_MTK_PMIC=y
 CONFIG_MTK_PMIC_WRAP=y
@@ -1124,10 +1125,10 @@ CONFIG_MTK_SIM2=y
 # CONFIG_MTK_SOUND is not set
 # CONFIG_MTK_AUDIO_EXTCODEC_SUPPORT is not set
 # CONFIG_MTK_TMG399X is not set
-CONFIG_MTK_FINGERPRINT=y
+# CONFIG_MTK_FINGERPRINT=y
 # CONFIG_MTK_GF318 is not set
 # CONFIG_MTK_GF516 is not set
-CONFIG_FINGERPRINT_GOODIX_GF_TEE=y
+# CONFIG_FINGERPRINT_GOODIX_GF_TEE=y
 CONFIG_MTK_MXG2320_NEW=y
 # CONFIG_MTK_MMC3524X is not set
 # CONFIG_MTK_LSM6DS0_ACC is not set
@@ -1147,11 +1148,11 @@ CONFIG_MU3_PHY=y
 # CONFIG_U3_PHY_GPIO_SUPPORT is not set
 CONFIG_U3_PHY_AHB_SUPPORT=y
 CONFIG_MTK_XHCI=y
-# CONFIG_MTK_OTG_PMIC_BOOST_5V is not set
+CONFIG_MTK_OTG_PMIC_BOOST_5V=y
 # CONFIG_MTK_OTG_OC_DETECTOR is not set
 # CONFIG_MTK_TEST_XHCI is not set
 # CONFIG_USB_FUSB3000 is not set
-CONFIG_USB_TUSB320=y
+# CONFIG_USB_TUSB320=y
 # CONFIG_USBIF_COMPLIANCE is not set
 # CONFIG_C60802_SUPPORT is not set
 # CONFIG_MTK_S3320 is not set
@@ -1187,12 +1188,12 @@ CONFIG_MTK_STAGING=y
 CONFIG_MTK_GPU_SUPPORT=y
 # CONFIG_MTK_ICUSB_SUPPORT is not set
 # CONFIG_MTK_DT_USB_SUPPORT is not set
-# CONFIG_MTK_SWCHR_SUPPORT is not set
+CONFIG_MTK_SWCHR_SUPPORT=y
 # CONFIG_MTK_DISABLE_POWER_ON_OFF_VOLTAGE_LIMITATION is not set
 CONFIG_MTK_KERNEL_POWER_OFF_CHARGING=y
 # CONFIG_MTK_BQ24160_SUPPORT is not set
 # CONFIG_MTK_MT8193_SUPPORT is not set
-CONFIG_MTK_HDMI_SUPPORT=y
+# CONFIG_MTK_HDMI_SUPPORT=y
 # CONFIG_MTK_HDMI_3D_SUPPORT is not set
 # CONFIG_MTK_INTERNAL_HDMI_SUPPORT is not set
 # CONFIG_MTK_MT8193_HDCP_SUPPORT is not set
@@ -1208,7 +1209,7 @@ CONFIG_MTK_SIM2_SOCKET_TYPE="1"
 # CONFIG_MTK_CTP_RESET_CONFIG is not set
 CONFIG_MTK_BICR_SUPPORT=y
 CONFIG_MTK_VIDEO_HEVC_SUPPORT=y
-CONFIG_MTK_AAL_SUPPORT=y
+# CONFIG_MTK_AAL_SUPPORT=y
 # CONFIG_NAND_OTP_SUPPORT is not set
 # CONFIG_MTK_OD_SUPPORT is not set
 # CONFIG_MTK_DISPLAY_120HZ_SUPPORT is not set
@@ -1219,8 +1220,8 @@ CONFIG_MTK_LENS_AD5820AF_SUPPORT=y
 # CONFIG_MTK_LENS_AD5823AF_SUPPORT is not set
 # CONFIG_MTK_LENS_AK7345AF_SUPPORT is not set
 # CONFIG_MTK_LENS_BU6424AF_SUPPORT is not set
-CONFIG_MTK_LENS_BU6429AF_SUPPORT=y
-CONFIG_MTK_LENS_LC898217AF_SUPPORT=y
+# CONFIG_MTK_LENS_BU6429AF_SUPPORT=y
+# CONFIG_MTK_LENS_LC898217AF_SUPPORT=y
 # CONFIG_MTK_LENS_BU64745GWZAF_SUPPORT is not set
 # CONFIG_MTK_LENS_DW9718AF_SUPPORT is not set
 CONFIG_MTK_LENS_DW9714AF_SUPPORT=y
@@ -1236,7 +1237,7 @@ CONFIG_MTK_LENS_DW9714AF_SUPPORT=y
 # CONFIG_MTK_LENS_GAF001AF_SUPPORT is not set
 # CONFIG_MTK_LENS_GAF002AF_SUPPORT is not set
 # CONFIG_MTK_LENS_GAF008AF_SUPPORT is not set
-CONFIG_CPU_LOW_POWER=y
+# CONFIG_CPU_LOW_POWER=y
 # CONFIG_MTK_INHOUSE_GPU is not set
 # CONFIG_SW_SYNC64 is not set
 CONFIG_MTK_LASTPC=y
@@ -1244,9 +1245,9 @@ CONFIG_MTK_LASTPC=y
 CONFIG_MTK_HWMON=y
 CONFIG_MTK_CMDQ=y
 CONFIG_MTK_MT_LOGGER=y
-CONFIG_MTK_BOOT=y
-CONFIG_MTK_BOOT_REASON=y
-CONFIG_MTK_CHIP=y
+# CONFIG_MTK_BOOT=y
+# CONFIG_MTK_BOOT_REASON=y
+# CONFIG_MTK_CHIP=y
 CONFIG_MTK_CONN_MD=y
 CONFIG_MTK_LENS=y
 CONFIG_MTK_IMGSENSOR=y
@@ -1254,11 +1255,11 @@ CONFIG_MTK_CAM_CAL=y
 # CONFIG_MTK_FLASHLIGHT is not set
 # CONFIG_MTK_DUM_CHAR is not set
 CONFIG_MTK_SYSENV=y
-CONFIG_MTK_GPT_SCHEME_SUPPORT=y
-CONFIG_MTK_SMI_EXT=y
+# CONFIG_MTK_GPT_SCHEME_SUPPORT=y
+# CONFIG_MTK_SMI_EXT=y
 # CONFIG_MTK_BTCVSD is not set
 # CONFIG_MTK_SOUND_DRV is not set
-CONFIG_MTK_SPM=y
+# CONFIG_MTK_SPM=y
 CONFIG_MTK_POWER_GS=y
 # CONFIG_MTK_VIDEO is not set
 # CONFIG_MTK_MRDUMP is not set
@@ -1266,7 +1267,7 @@ CONFIG_MTK_POWER_GS=y
 CONFIG_MTK_VCOREFS=y
 CONFIG_MTK_EMI_MPU=y
 CONFIG_MTK_EMI_BWL=y
-CONFIG_MTK_GPIO=y
+# CONFIG_MTK_GPIO=y
 # CONFIG_MTK_MT6306_SUPPORT is not set
 CONFIG_MTK_SERIAL=y
 CONFIG_MTK_SERIAL_CONSOLE=y
@@ -1290,7 +1291,7 @@ CONFIG_MTK_COMBO_COMM=y
 CONFIG_MTK_COMBO_COMM_UART=y
 CONFIG_MTK_COMBO_COMM_SDIO=y
 # CONFIG_MTK_COMBO_COMM_NPWR is not set
-CONFIG_MTK_COMBO_COMM_APO=y
+# CONFIG_MTK_COMBO_COMM_APO=y
 CONFIG_MTK_COMBO_BT=y
 CONFIG_MTK_COMBO_ANT=y
 CONFIG_MTK_COMBO_GPS=y
@@ -1520,7 +1521,7 @@ CONFIG_MD=y
 CONFIG_BLK_DEV_DM_BUILTIN=y
 CONFIG_BLK_DEV_DM=y
 # CONFIG_DM_DEBUG is not set
-CONFIG_DM_BUFIO=y
+# CONFIG_DM_BUFIO=y
 CONFIG_DM_CRYPT=y
 # CONFIG_DM_SNAPSHOT is not set
 # CONFIG_DM_THIN_PROVISIONING is not set
@@ -1532,7 +1533,7 @@ CONFIG_DM_CRYPT=y
 # CONFIG_DM_DELAY is not set
 CONFIG_DM_UEVENT=y
 # CONFIG_DM_FLAKEY is not set
-CONFIG_DM_VERITY=y
+# CONFIG_DM_VERITY=y
 # CONFIG_TARGET_CORE is not set
 CONFIG_NETDEVICES=y
 CONFIG_NET_CORE=y
@@ -1867,14 +1868,14 @@ CONFIG_SPI_MASTER=y
 # Enable PHYLIB and NETWORK_PHY_TIMESTAMPING to see the additional clocks.
 #
 # CONFIG_PTP_1588_CLOCK_PCH is not set
-CONFIG_PINCTRL=y
+# CONFIG_PINCTRL=y
 
 #
 # Pin controllers
 #
 # CONFIG_PINMUX is not set
-CONFIG_PINCONF=y
-CONFIG_GENERIC_PINCONF=y
+# CONFIG_PINCONF=y
+# CONFIG_GENERIC_PINCONF=y
 # CONFIG_DEBUG_PINCTRL is not set
 # CONFIG_PINCTRL_SINGLE is not set
 # CONFIG_PINCTRL_EXYNOS is not set
@@ -1949,7 +1950,7 @@ CONFIG_POWER_SUPPLY=y
 # CONFIG_CHARGER_GPIO is not set
 # CONFIG_CHARGER_BQ2415X is not set
 # CONFIG_CHARGER_SMB347 is not set
-CONFIG_CHARGER_BQ2589X=y
+# CONFIG_CHARGER_BQ2589X=y
 # CONFIG_BATTERY_GOLDFISH is not set
 CONFIG_POWER_RESET=y
 # CONFIG_POWER_RESET_GPIO is not set
@@ -2157,7 +2158,7 @@ CONFIG_MT_SND_SOC_V1=y
 # CONFIG_MT_SND_SOC_8163 is not set
 CONFIG_MTK_SPEAKER=y
 # CONFIG_MTK_NXP_TFA9890 is not set
-CONFIG_MTK_NXP_TFA9897=y
+# CONFIG_MTK_NXP_TFA9897=y
 CONFIG_SND_SOC_I2C_AND_SPI=y
 # CONFIG_SND_SOC_ALL_CODECS is not set
 CONFIG_SND_SIMPLE_CARD=y
@@ -2669,10 +2670,10 @@ CONFIG_ANDROID_BINDER_IPC=y
 # File systems
 #
 # CONFIG_EXT2_FS is not set
-# CONFIG_EXT3_FS is not set
+CONFIG_EXT3_FS=y
 # CONFIG_EXT3_DEFAULTS_TO_ORDERED is not set
-# CONFIG_EXT3_FS_XATTR is not set
-# CONFIG_EXT3_FS_POSIX_ACL is not set
+CONFIG_EXT3_FS_XATTR=y
+CONFIG_EXT3_FS_POSIX_ACL=y
 # CONFIG_EXT3_FS_SECURITY is not set
 CONFIG_EXT4_FS=y
 CONFIG_EXT4_USE_FOR_EXT23=y
@@ -2766,21 +2767,21 @@ CONFIG_MISC_FILESYSTEMS=y
 # CONFIG_PSTORE is not set
 # CONFIG_SYSV_FS is not set
 # CONFIG_UFS_FS is not set
-CONFIG_F2FS_FS=y 
-CONFIG_F2FS_STAT_FS=y 
-CONFIG_F2FS_FS_XATTR=y 
-CONFIG_F2FS_FS_POSIX_ACL=y 
-CONFIG_F2FS_FS_SECURITY=y  
-CONFIG_F2FS_FS_ENCRYPTION=y
+# CONFIG_F2FS_FS=y 
+# CONFIG_F2FS_STAT_FS=y 
+# CONFIG_F2FS_FS_XATTR=y 
+# CONFIG_F2FS_FS_POSIX_ACL=y 
+# CONFIG_F2FS_FS_SECURITY=y  
+# CONFIG_F2FS_FS_ENCRYPTION=y
 #MMAP_RND_BITS
-CONFIG_ARCH_MMAP_RND_BITS_MIN=18
-CONFIG_ARCH_MMAP_RND_BITS_MAX=24
-CONFIG_ARCH_MMAP_RND_COMPAT_BITS_MIN=11
-CONFIG_ARCH_MMAP_RND_COMPAT_BITS_MAX=16
-CONFIG_HAVE_ARCH_MMAP_RND_BITS=y
-CONFIG_ARCH_MMAP_RND_BITS=18
-CONFIG_HAVE_ARCH_MMAP_RND_COMPAT_BITS=y
-CONFIG_ARCH_MMAP_RND_COMPAT_BITS=11
+# CONFIG_ARCH_MMAP_RND_BITS_MIN=18
+# CONFIG_ARCH_MMAP_RND_BITS_MAX=24
+# CONFIG_ARCH_MMAP_RND_COMPAT_BITS_MIN=11
+# CONFIG_ARCH_MMAP_RND_COMPAT_BITS_MAX=16
+# CONFIG_HAVE_ARCH_MMAP_RND_BITS=y
+# CONFIG_ARCH_MMAP_RND_BITS=18
+# CONFIG_HAVE_ARCH_MMAP_RND_COMPAT_BITS=y
+# CONFIG_ARCH_MMAP_RND_COMPAT_BITS=11
 # CONFIG_NETWORK_FILESYSTEMS is not set
 CONFIG_NLS=y
 CONFIG_NLS_DEFAULT="iso8859-1"
@@ -2996,7 +2997,7 @@ CONFIG_CRYPTO_BLKCIPHER=y
 CONFIG_CRYPTO_BLKCIPHER2=y
 CONFIG_CRYPTO_HASH=y
 CONFIG_CRYPTO_HASH2=y
-CONFIG_CRYPTO_RNG=y
+# CONFIG_CRYPTO_RNG=y
 CONFIG_CRYPTO_RNG2=y
 CONFIG_CRYPTO_PCOMP2=y
 CONFIG_CRYPTO_MANAGER=y
@@ -3016,13 +3017,13 @@ CONFIG_CRYPTO_ABLK_HELPER=y
 #
 # CONFIG_CRYPTO_CCM is not set
 # CONFIG_CRYPTO_GCM is not set
-CONFIG_CRYPTO_SEQIV=y
+# CONFIG_CRYPTO_SEQIV=y
 
 #
 # Block modes
 #
 CONFIG_CRYPTO_CBC=y
-CONFIG_CRYPTO_CTR=y
+# CONFIG_CRYPTO_CTR=y
 # CONFIG_CRYPTO_CTS is not set
 CONFIG_CRYPTO_ECB=y
 # CONFIG_CRYPTO_LRW is not set
@@ -3034,7 +3035,7 @@ CONFIG_CRYPTO_ECB=y
 #
 # CONFIG_CRYPTO_CMAC is not set
 CONFIG_CRYPTO_HMAC=y
-CONFIG_CRYPTO_XCBC=y
+# CONFIG_CRYPTO_XCBC=y
 # CONFIG_CRYPTO_VMAC is not set
 
 #
