--- a/arch/arm64/configs/l861_defconfig
+++ b/arch/arm64/configs/l861_defconfig
@@ -1674,6 +1674,7 @@ CONFIG_TOUCHSCREEN_MTK=y
 # CONFIG_TOUCHSCREEN_MTK_GT818B_FPGA is not set
 # CONFIG_TOUCHSCREEN_S7020 is not set
 # CONFIG_TOUCHSCREEN_MTK_GT9XX_2 is not set
+CONFIG_MTK_GT9157_861=y
 # CONFIG_MTK_GT9XX is not set
 # CONFIG_GT9XX_2 is not set
 # CONFIG_MTK_GT911 is not set
