--- a/drivers/input/touchscreen/Kconfig
+++ b/drivers/input/touchscreen/Kconfig
@@ -434,6 +434,16 @@ config TOUCHSCREEN_MTK
 	  To compile this driver as a module, choose M here: the
 	  module will be called MediaTek touch panel.
 
+config MTK_GT9157_861
+	bool "GT9157 TPC for AMOI L861"
+	depends on TOUCHSCREEN_MTK
+	help
+	  Say Y here to enable MTK_GT9157 touchscreen support.
+
+	  If unsure, say N.
+
+	  To compile this driver as a module, choose M here: the
+	  module will be called MTK_GT9XX.	
 
 config TOUCHSCREEN_MTK_GT9XX
 	bool "GT9XX for Mediatek package"
