--- a/arch/arm64/configs/l861_defconfig
+++ b/arch/arm64/configs/l861_defconfig
@@ -299,7 +299,7 @@ CONFIG_CMDLINE_FROM_BOOTLOADER=y
 # CONFIG_CMDLINE_EXTEND is not set
 # CONFIG_CMDLINE_FORCE is not set
 CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE=y
-CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE_NAMES="L861"
+CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE_NAMES="x500"
 
 #
 # CPU Power Management
