--- a/arch/arm64/configs/l861_defconfig
+++ b/arch/arm64/configs/l861_defconfig
@@ -1704,9 +1704,9 @@ CONFIG_MTK_GT9157_861=y
 # CONFIG_TOUCHSCREEN_SYNAPTICS_S3528 is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_S3508 is not set
-CONFIG_MTK_SYNAPTICS_3320=y
-CONFIG_MTK_SYNAPTICS_3320U=y
-CONFIG_MTK_ATMEL_MXT=y
+# CONFIG_MTK_SYNAPTICS_3320=y
+# CONFIG_MTK_SYNAPTICS_3320U=y
+# CONFIG_MTK_ATMEL_MXT=y
 CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_AD714X is not set
 # CONFIG_INPUT_BMA150 is not set
